DI-334
updated docker to pull from jdk8 base image, increased java heap size